--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -4,9 +4,19 @@ html, body {
     margin:0;
 }
 
+body::-webkit-scrollbar {
+    display: none;
+}
+
 .main {
     width:100%;
     height:100%;
+}
+
+.carousel-item img {
+    width: 100%;
+    height: 500px;
+    object-fit: cover;
 }
 
 .button_click {
