--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -8,9 +8,20 @@ body::-webkit-scrollbar {
     display: none;
 }
 
+@font-face {
+    font-family: 'ccl_font';
+    src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/2405-2@1.0/Ownglyph_JAEGEONSA-Rg.woff2') format('woff2');
+    font-weight: normal;
+    font-style: normal;
+}
+
 .main {
     width:100%;
     height:100%;
+}
+
+.font_ccl {
+    font-family: ccl_font;
 }
 
 .carousel-item img {
