--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -1,16 +1,18 @@
-@font-face {
-    font-family: 'ccl_font';
-    src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/2405-2@1.0/Ownglyph_JAEGEONSA-Rg.woff2') format('woff2');
-    font-weight: normal;
-    font-style: normal;
+html, body {
+    width:100%;
+    height:100%;
+    margin:0;
 }
 
-.font_ccl {
-    font-family: ccl_font;
+body::-webkit-scrollbar {
+    display: none;
 }
 
-.carousel-item img {
-    width: 100%;
-    height: 500px;
-    object-fit: cover;
+.main {
+    width:100%;
+    height:100%;
+}
+
+.button_click {
+    cursor:pointer;
 }
