--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -4,8 +4,14 @@
         <title> error </title>
         <meta charset="UTF-8">
         <meta name='viewport' content='width=device-width, initial-scale=1'>
+        <link rel="stylesheet" href="/css/main.css">
+        <script src="/js/boot.js"></script>
     </head>
     <body>
-        error
+        <main class="text-center position-absolute" style="left:50%; top:50%; transform:translate(-50%,-50%); width:100%;">
+            <h1>Error 404</h1>
+            <h2>페이지가 존재하지 않습니다</h2>
+            <a href="https://ccl.ourgram.co.kr" class="btn btn-danger">Go to home page</a>
+        </main>
     </body>
 </html>
