--- a/src/main/resources/static/css/learning.css
+++ b/src/main/resources/static/css/learning.css
@@ -5,3 +5,18 @@
     transform:translate(-50%,-50%);
     text-align:center;
 }
+
+.background_img {
+    position:absolute;
+    top:50%;
+    left:50%;
+    transform:translate(-50%,-50%);
+    width:100%;
+    height:70%;
+    background-image:url("/img/main_1.jpg");
+    background-size:cover;
+    background-repeat:no-repeat;
+    background-position:center;
+    z-index:2;
+    opacity:20%;
+}
