--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -10,7 +10,7 @@
     <body>
         <main class="text-center position-absolute" style="left:50%; top:50%; transform:translate(-50%,-50%); width:100%;">
             <h1>Error 404</h1>
-            <h2>페이지가 존재하지 않습니다</h2>
+            <h2>에러 발생 아래 버튼을 눌러주세요</h2>
             <a href="https://ccl.ourgram.co.kr" class="btn btn-danger">Go to home page</a>
         </main>
     </body>
