--- a/src/main/resources/static/css/learning.css
+++ b/src/main/resources/static/css/learning.css
@@ -6,17 +6,15 @@
     text-align:center;
 }
 
-.background_img {
-    position:absolute;
-    top:50%;
-    left:50%;
-    transform:translate(-50%,-50%);
-    width:100%;
-    height:70%;
-    background-image:url("/img/main_1.jpg");
-    background-size:cover;
-    background-repeat:no-repeat;
-    background-position:center;
-    z-index:2;
-    opacity:20%;
+.chart {
+    position: absolute;
+    left: 0px;
+    top: 0px;
+    width: 1185px;
+    height: 316px;
+    user-select: none;
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0); 
+    padding: 0px;
+    margin: 0px; 
+    border-width: 0px;
 }
