--- a/src/main/resources/static/css/account.css
+++ b/src/main/resources/static/css/account.css
@@ -2,3 +2,51 @@
     width:100%;
     height:100%;
 }
+
+.menu_page {
+    width:65%;
+    height:100%;
+    position:absolute;
+    left:50%;
+    top:50%;
+    transform:translate(-50%,-50%);
+}
+
+@media(max-width:700px) {
+    .menu_page {
+        width:70%;
+        left:66%;
+    }
+}
+
+@media(max-width:800px) {
+    .menu_page {
+        width:60%;
+        left:66%;
+    }
+}
+
+@media(max-width:1000px) {
+    .menu_page {
+        width:60%;
+        left:60%;
+    }
+}
+
+@media(max-width:1100px) {
+    .menu_page {
+        width:50%;
+    }
+}
+
+@media(max-width:1300px) {
+    .menu_page {
+        width:55%;
+    }
+}
+
+@media(max-width:1400px) {
+    .menu_page {
+        width:60%;
+    }
+}
